banktop(fix): stop blowing up when there arent enough players for the full board